WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257081
[GStreamer] Element factories stored in registry scanner reported as leaked
https://bugs.webkit.org/show_bug.cgi?id=257081
Summary
[GStreamer] Element factories stored in registry scanner reported as leaked
Philippe Normand
Reported
2023-05-20 01:41:33 PDT
This is a false-positive report.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-05-20 01:43:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14144
EWS
Comment 2
2023-05-22 03:49:49 PDT
Committed
264319@main
(8d17df994a9e): <
https://commits.webkit.org/264319@main
> Reviewed commits have been landed. Closing PR #14144 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-22 03:50:21 PDT
<
rdar://problem/109650437
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug