[GStreamer] Element factories stored in registry scanner reported as leaked https://bugs.webkit.org/show_bug.cgi?id=257081

Reviewed by Xabier Rodriguez-Calvar.

Valid `selectedFactory` ends up stored in the scanner singleton, so flag it as MAYBE_LEAKED.

* Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.cpp:
(WebCore::GStreamerRegistryScanner::ElementFactories::hasElementForCaps const):

Canonical link: https://commits.webkit.org/264319@main